--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <input type="text" id="pass">
+    <button id="send">Send</button>
     <div id="app"></div>
 </body>
 </html>
